Boutons Infos + Menu terminé

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,6 +24,24 @@ body {
 }
 
 h1 {
-    color:
+    color: #ffffff
 }
 
+h2 {
+    color: #fbdcdc
+}
+
+h3 {
+    color: #fbdcdc
+}
+
+p {
+    color: #ffffff
+}
+
+button {
+    background-color: #ff7979;
+    border-color: #000000;
+    color: #ffffff"
+
+}
