--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 body {
     background: #56294a;
+    font-family: 'Catamaran', sans-serif;
 }
 
 img {
@@ -58,6 +59,8 @@ li {
     display: flex;
     align-items: center;
     margin-right: 10px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .ChienChatColor {
@@ -80,6 +83,7 @@ li {
 
 h1 {
     color: #ffffff;
+    font-family: 'Catamaran', sans-serif;
 }
 
 h2 {
@@ -88,21 +92,28 @@ h2 {
 
 h3 {
     color: #fbdcdc;
+
+    font-size: 16px;
 }
 
 p {
     color: #ffffff;
+    font-family: 'Crimson Pro', serif;
+    font-size: 16px;
 }
 
 button {
     background-color: #ff7979;
     border-color: #000000;
     color: #000000;
-
+    font-family: 'Catamaran', sans-serif;
+    font-weight: bold;
 }
 
 dd {
     color: #fbdcdc;
+    font-family: 'Catamaran', sans-serif;
+    font-size: 14px;
 }
 
 aside {
